Milan is Klaar!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
@@ -36,10 +36,10 @@
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
                     <a href="#">Waarom dit Doel Michael</a> 
-                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
                     <a href="#">Waarom dit spel Michael</a>  
-                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
