--- a/milan.html
+++ b/milan.html
@@ -14,7 +14,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
@@ -35,10 +35,10 @@
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
                     <a href="#">Waarom dit Doel Michael</a> 
-                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
                     <a href="#">Waarom dit spel Michael</a>  
-                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
@@ -72,11 +72,10 @@
 
 <div class="foto" id="foto">
 <video controls width="360" height="360">
-    <source src="img/VID20230722212524 (1).mp4" type="video/mp4">
+    <source src="img/Fortnite   2024-01-18 20-32-48.mp4" type="video/mp4">
 </video>
-<img src="img/kampioen foto.jpg" alt="yvan zijn kampieon foto" width="550" height="350">
-    <video controls width="360" height="360">
-        <source src="img/hq5rkdf52WgiPBhGpAGhLg.mp4" type="video/mp4" >
+<img src="img/Feyenoord.png" alt="Feyenoord" width="350" height="350">
+<img src="img/eleni.png" alt="eleni" width="350" height="350">
         </video>  
     </div>
     <script src="milan.js"></script>
