--- a/waaromdoel-yvan.html
+++ b/waaromdoel-yvan.html
@@ -14,7 +14,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
@@ -34,21 +34,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-<<<<<<< HEAD:waaromdoel-yvan.html
-                    <a href="#">Waarom dit Doel Michael</a> 
-                    <a href="#">Waarom dit Doel Milan</a>   
-                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
-                    <a href="#">Waarom dit spel Michael</a>  
-                    <a href="#">Waarom dit spel Milan</a> 
-                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
-=======
                     <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
-                    <a href="#">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
+                    <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
-                    <a href="#">waarom dit spel Milan</a> 
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="waaromgame.html">waarom dit spel Yvan</a>   
->>>>>>> d136e74332f9e4f28da25d56156834d8da7ad5cb:waaromdoel.html
                 </div>
             </div>
             <a href="contact.html">Contact</a>
@@ -71,7 +62,7 @@
         <p>Ik nodig jullie uit om je ook aan te sluiten bij deze missie voor een duurzamere en meer evenwichtige toekomst. Laten we samen werken aan een wereld waarin mens en natuur in harmonie leven.</p>
 
         <p>Met vriendelijke groet,</p>
-        <p>[Jouw Naam]</p>
+        <p>Yvan van Dijk</p>
     </section>
 
 </body>
