--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
@@ -23,13 +23,8 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-<<<<<<< HEAD
-                    <a href="#">Milan van Deelen</a>
-                    <a href="Michael.html">Michael Davelaar</a>
-=======
                     <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
->>>>>>> 6ad039f2a9ec18220bb95dbcf94c1f1a1e01a4d0
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="goeddoel-milan.html">Goed Doel Milan</a>
@@ -39,21 +34,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-<<<<<<< HEAD
-                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
-                    <a href="#">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
-                    <a href="#">waarom dit spel Milan</a> 
-                    <a href="waaromgame.html">waarom dit spel Yvan</a>   
-=======
                     <a href="#">Waarom dit Doel Michael</a> 
-                    <a href="#">Waarom dit Doel Milan</a>   
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
                     <a href="#">Waarom dit spel Michael</a>  
-                    <a href="#">Waarom dit spel Milan</a> 
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
->>>>>>> 6ad039f2a9ec18220bb95dbcf94c1f1a1e01a4d0
                 </div>
             </div>
             <a href="contact.html">Contact</a>
