--- a/yvan.html
+++ b/yvan.html
@@ -14,7 +14,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="#">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="game.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
@@ -23,7 +23,7 @@
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
-                    <a href="#">Milan van Deelen</a>
+                    <a href="milan.html">Milan van Deelen</a>
                     <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
@@ -35,10 +35,10 @@
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
                     <a href="#">waarom dit Doel Michael</a> 
-                    <a href="#">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel.html">waarom dit Doel Yvan</a>  
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
+                    <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
-                    <a href="#">waarom dit spel Milan</a> 
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="waaromgame.html">waarom dit spel Yvan</a>   
                 </div>
             </div>
