--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
                 <a href="about.html">Pong</a>
-                <a href="#">Snake</a>
+                <a href="gameyvan.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
