--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
                 <a href="game-milan.html">Pong</a>
-                <a href="#">Snake</a>
+                <a href="gameyvan.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
@@ -26,7 +26,7 @@
                     <a href="#">Wie zijn wij</a>
                     <a href="milan.html">Milan van Deelen</a>
                     <a href="Michael.html">Michael Davelaar</a>
-                    <a href="#">Yvan van Dijk</a>
+                    <a href="yvan.html">Yvan van Dijk</a>
                     <a href="#">Goed Doel</a>
                 </div>
             </div>
