--- a/waaromgame-milan.html
+++ b/waaromgame-milan.html
@@ -15,7 +15,7 @@
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
                 <a href="game-milan.html">Pong</a>
-                <a href="game.html">Snake</a>
+                <a href="gameyvan.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
