--- a/yvan.html
+++ b/yvan.html
@@ -15,7 +15,7 @@
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
                 <a href="game-milan.html">Pong</a>
-                <a href="game.html">Snake</a>
+                <a href="gameyvan.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
@@ -97,46 +97,6 @@
               document.getElementById("demo2").innerHTML = "";
             }
 
-</ul>
-<p>Ik game best vaak op een dag, vooral met vrienden speel ik Sea Of Thieves en GTA V.</p>
-<p>Ook vind ik het coderen leuk om soms even te doen als ik mij verveel
-ook doe ik badminton momenteel speel ik bij de senioren bij de club PBC boomgaardshoek. Ik ben een keer kampieon geworden
-ik vind eten ook geweldig, mijn bijnaam thuis is de prullebak.</p>
-<table>
-    <tr>
-        <th></th>
-        <th>Beste hobby</th>
-        <th>Waarom</th>
-        <th>wat doet<br> het met mij</th>
-    </tr>
-    <tr>
-        <th>1#</th>
-        <td rowspan="2">badminton</td>
-        <td>spelen is <br>gewoon geweldig</td>
-        <td>het maakt mij blij</td>
-    </tr>
-    <tr>
-        <th>2#</th>
-        <td>training</td>
-        <td>maakt mij blij</td>
-    </tr>
-    <tr>
-        <th>3#</th>
-        <td colspan="3">ik hou van mij leven :)</td>
-    </tr>
-    <tr>
-        <th>4#</th>
-        <td>gamen</td>
-        <td>je ben<br> even weg</td>
-        <td>het laat <br>tijd voorbij vliegen</td>
-    </tr>
-    <tr>
-        <th>5#</th>
-        <td>eten</td>
-        <td>het is lekker</td>
-        <td>maakt mij<br> heel erg blij</td>
-    </tr>
-</table>
             function showElement(elementId) {
     var element = document.getElementById(elementId);
     if (element) {
