--- a/waaromdoel-milan.html
+++ b/waaromdoel-milan.html
@@ -39,7 +39,7 @@
                     <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
                     <a href="#">waarom dit spel Michael</a>  
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
-                    <a href="waaromgame.html">waarom dit spel Yvan</a>   
+                    <a href="Waaromgame-yvan.html">waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
