--- a/Michael.html
+++ b/Michael.html
@@ -58,7 +58,7 @@
     </ul>
   <p>Ik game vaak na school en als ik geen huiswerk heb. Ik speel vaak Valorant, Overwatch, Call of Duty, CS:GO en andere games.</p>
   <p>Ik heb Voetbal en Badminton gedaan, maar vanwege blessures ben ik er uit eindelijk mee gestopt en ik had er geen motivatie meer voor.</p>
-  <p>Soms ga ik ook naar films en game halls samen met mijn ouders of vrienden, en naar car meets (vooral japanse)</p>
+  <p>Soms. ga ik ook naar films en game halls samen met mijn ouders of vrienden, en naar car meets (vooral japanse)</p>
   <center>  
 
     <div class="media-container">
