--- a/WaaromDoelMichael.html
+++ b/WaaromDoelMichael.html
@@ -24,22 +24,22 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="milan.html">Milan van Deelen</a>
-                    <a href="Michael.html">Michael Davelaar</a>
+                    <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
-                    <a href="goeddoel.html">Goed Doel Yvan</a>
+                    <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="goeddoel-milan.html">Goed Doel Milan</a>
                     <a href="GoedDoelMichael.html">Goed Doel Michael</a>
                 </div>
             </div>
             <div class="dropdown">
-                <button class="dropbtn">waarom</button>
+                <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
+                    <a href="#">Waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
-                    <a href="Waaromgame-yvan.html">waarom dit spel Yvan</a>   
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
