--- a/gameyvan.html
+++ b/gameyvan.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="yvan.css">
   </head>
 <body>
-    <div class="navbar">
+       <div class="navbar">
         <a href="https://www.techniekcollegerotterdam.nl/"><img class="pipi" src="img/tcrlogo.png" alt="TCR"></a>
+       
         <div class="nav-links">
             <a href="index.html">Home</a>
             <div class="dropdown">
@@ -19,6 +20,7 @@
                 <a href="#">Duck Hunt</a>
             </div>
         </div>
+
             <div class="dropdown">
                 <button class="dropbtn">Over Ons</button>
                 <div class="dropdown-content">
@@ -45,6 +47,12 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
+    
+    <div class="levelcontainer">
+        <button><a href="gameyvan.html">level 1</a></button>
+        <br>
+        <button><a href="level2yvan.html">level 2</a></button>
+       </div>
     <div id="gameContainer">
         <canvas id="gameBoard" width="500" height="500"></canvas>
         <div id="scoreText">0</div>
