--- a/waaromdoel-milan.html
+++ b/waaromdoel-milan.html
@@ -34,12 +34,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-                    <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
+                    <a href="#">Waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
-                    <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
-                    <a href="Waaromgame-yvan.html">waarom dit spel Yvan</a>   
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
