--- a/waaromgame-yvan.html
+++ b/waaromgame-yvan.html
@@ -24,7 +24,7 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="milan.html">Milan van Deelen</a>
-                    <a href="Michael.html">Michael Davelaar</a>
+                    <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="goeddoel-milan.html">Goed Doel Milan</a>
@@ -45,7 +45,6 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-
     <header>
         <h1>Waarom Ik Een Snake Game Heb Gekozen</h1>
     </header>
