--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,22 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="milan.html">Milan van Deelen</a>
-                    <a href="Michael.html">Michael Davelaar</a>
+                    <a href="#">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
-                    <a href="#">Goed Doel</a>
+                    <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
+                    <a href="goeddoel-milan.html">Goed Doel Milan</a>
+                    <a href="GoedDoelMichael.html">Goed Doel Michael</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Waarom</button>
+                <div class="dropdown-content">
+                    <a href="#">Waarom dit Doel Michael</a> 
+                    <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
+                    <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
+                    <a href="#">Waarom dit spel Michael</a>  
+                    <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
+                    <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
             </div>
             <a href="contact.html">Contact</a>
