--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
     <div class="navbar">
         <a href="https://www.techniekcollegerotterdam.nl/"><img class="pipi" src="img/tcrlogo.png" alt="TCR"></a>
         <div class="nav-links">
@@ -15,7 +14,7 @@
             <div class="dropdown">
             <button class="dropbtn">Games</button>
             <div class="dropdown-content">
-                <a href="about.html">Pong</a>
+                <a href="game-milan.html">Pong</a>
                 <a href="gameyvan.html">Snake</a>
                 <a href="#">Duck Hunt</a>
             </div>
