--- a/WumpusHunt.html
+++ b/WumpusHunt.html
@@ -17,7 +17,7 @@
             <div class="dropdown-content">
                 <a href="game-milan.html">Pong</a>
                 <a href="gameyvan.html">Snake</a>
-                <a href="#">Duck Hunt</a>
+                <a href="WumpusHunt.html">Wumpus Hunt</a>
             </div>
         </div>
             <div class="dropdown">
