--- a/level2yvan.html
+++ b/level2yvan.html
@@ -16,7 +16,7 @@
             <div class="dropdown-content">
                 <a href="game-milan.html">Pong</a>
                 <a href="gameyvan.html">Snake</a>
-                <a href="#">Duck Hunt</a>
+                <a href="WumpusHunt.html">Wumpus Hunt</a>
             </div>
         </div>
 
@@ -25,7 +25,7 @@
                 <div class="dropdown-content">
                     <a href="#">Wie zijn wij</a>
                     <a href="milan.html">Milan van Deelen</a>
-                    <a href="#">Michael Davelaar</a>
+                    <a href="Michael.html">Michael Davelaar</a>
                     <a href="yvan.html">Yvan van Dijk</a>
                     <a href="goeddoel-yvan.html">Goed Doel Yvan</a>
                     <a href="goeddoel-milan.html">Goed Doel Milan</a>
@@ -35,7 +35,7 @@
             <div class="dropdown">
                 <button class="dropbtn">Waarom</button>
                 <div class="dropdown-content">
-                    <a href="#">Waarom dit Doel Michael</a> 
+                    <a href="WaaromDoelMichael.html">Waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
                     <a href="#">Waarom dit spel Michael</a>  
