--- a/WumpusHunt.html
+++ b/WumpusHunt.html
@@ -38,7 +38,7 @@
                     <a href="WaaromDoelMichael.html">waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="waaromdoel-yvan">waarom dit Doel Yvan</a>  
-                    <a href="#">waarom dit spel Michael</a>  
+                    <a href="WaaromGameMichael.html">Waarom dit spel Michael</a>  
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">waarom dit spel Yvan</a>   
                 </div>
