--- a/gameyvan.html
+++ b/gameyvan.html
@@ -39,7 +39,7 @@
                     <a href="WaaromDoelMichael.html">Waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
-                    <a href="#">Waarom dit spel Michael</a>  
+                    <a href="WaaromGameMichael.html">Waarom dit spel Michael</a>    
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
