--- a/WaaromGameMichael.html
+++ b/WaaromGameMichael.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="yvan.css">
+    <title>Waarom Game Michael</title>
+    <link rel="stylesheet" href="Michael.css">
 </head>
 <body>
     <div class="navbar">
@@ -37,7 +37,7 @@
                     <a href="WaaromDoelMichael.html">Waarom dit Doel Michael</a> 
                     <a href="waaromdoel-milan.html">waarom dit Doel Milan</a>   
                     <a href="Waaromdoel-yvan.html">Waarom dit Doel Yvan</a>  
-                    <a href="WaaromGameMichael.html">Waarom dit spel Michael</a>   
+                    <a href="WaaromGameMichael.html">Waarom dit spel Michael</a>  
                     <a href="waaromgame-milan.html">Waarom dit spel Milan</a> 
                     <a href="Waaromgame-yvan.html">Waarom dit spel Yvan</a>   
                 </div>
@@ -45,25 +45,23 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-
-    <header>
-        <h1>Waarom Ik Het Wereld Natuur Fonds Steun</h1>
-    </header>
-
-    <section>
-        <p>Beste vrienden,</p>
-
-        <p>Ik wil graag met jullie delen Waarom ik heb gekozen om het Wereld Natuur Fonds te steunen. In een tijd waarin onze planeet wordt geconfronteerd met ernstige milieuproblemen, geloof ik dat het cruciaal is om actie te ondernemen en de verantwoordelijkheid te nemen voor het behoud van onze natuurlijke wereld.</p>
-
-        <p>Het Wereld Natuur Fonds is voor mij een symbool van hoop en positieve verandering. Door hun wereldwijde inspanningen op het gebied van biodiversiteit, duurzame ontwikkeling en klimaatverandering, ben ik ervan overtuigd dat mijn steun bijdraagt aan een gezondere en evenwichtiger planeet voor toekomstige generaties.</p>
-
-        <p>Elke donatie, groot of klein, draagt bij aan de bescherming van bedreigde diersoorten, het behoud van waardevolle ecosystemen en het aanpakken van de urgentie van klimaatverandering. Samen kunnen we een verschil maken en een positieve impact hebben op onze wereld.</p>
-
-        <p>Ik nodig jullie uit om je ook aan te sluiten bij deze missie voor een duurzamere en meer evenwichtige toekomst. Laten we samen werken aan een wereld waarin mens en natuur in harmonie leven.</p>
-
-        <p>Met vriendelijke groet,</p>
-        <p>Yvan van Dijk</p>
-    </section>
-
+<p>Ik besloot Duck Hunt 2.0 te maken en enkele aanpassingen aan te brengen, omdat ik de nostalgie en vreugde van dit klassieke spel terug wilde brengen, maar dan met een moderne twist.</p>
+<br>
+<p>De originele Duck Hunt was een spel uit de jaren 80 en 0, en ik geloof dat het vandaag de dag nog steeds vreugde schenkt vanwege het gevoel van controle en prestatie dat het spelers geeft.</p>
+<br>
+<p>Als je Duck Hunt speelt, kijk je niet alleen passief naar iets dat op het scherm gebeurt, maar neem je actief deel aan het spel en zorg je ervoor dat er dingen gebeuren.</p>
+<br>
+<p>Dit niveau van betrokkenheid zorgt voor een diepere verbinding met het spel en maakt het gedenkwaardiger.</p>
+<br>
+<p>Ik wilde het spel ook updaten om het toegankelijker en leuker te maken voor moderne spelers.</p>
+<br>
+<p>Ik heb enkele aanpassingen aan de graphics en gameplay aangebracht om het een meer gepolijste en eigentijdse uitstraling te geven, terwijl de charme en eenvoud van het origineel behouden blijven.</p>
+<br>
+<p>Ik geloof dat deze updates Duck Hunt 2.0 zullen helpen een breder publiek aan te spreken en een nieuwe generatie kennis te laten maken met dit klassieke spel.</p>
+<br>
+<p>Over het geheel genomen heb ik Duck Hunt 2.0 gemaakt en enkele aanpassingen aangebracht omdat ik de vreugde en opwinding van dit klassieke spel met een nieuw publiek wilde delen en spelers een gevoel van controle en prestatie wilde geven dat vaak ontbreekt bij meer passieve vormen van entertainment.</p>
+<br>
+<p>Ik hoop dat Duck Hunt 2.0 goede herinneringen zal oproepen voor degenen die het origineel speelden, en nieuwe herinneringen zal creëren voor degenen die het voor de eerste keer ervaren.</p>
+</div>
 </body>
 </html>
