--- a/level3yvan.html
+++ b/level3yvan.html
@@ -65,7 +65,7 @@
         <div id="scoreText">0</div>
         <button id="resetBtn">Reset</button>
     </div>
-    <script src="snake.js"></script>
+    <script src="level3.js"></script>
     </div>
 </body>
 </html>
