--- a/level2yvan.html
+++ b/level2yvan.html
@@ -50,7 +50,16 @@
         <button><a href="gameyvan.html">level 1</a></button>
         <br>
         <button><a href="level2yvan.html">level 2</a></button>
+        <br>
+        <button><a href="level3yvan.html">level 3</a></button>
+        <div class="log">
+            <h2>Laatste scores:</h2>
+            <ul id="loglijst"></ul>
+        </div>
+        <button id="knopje" onclick="resetlog()">Reset de Loglijst!</button>
+    </div>
        </div>
+      
     <div id="gameContainer">
         <canvas id="gameBoard" width="500" height="500"></canvas>
         <div id="scoreText">0</div>
