--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <div class="content">
         <h1>Welkom op onze website</h1>
         <p>Deze website is gemaakt vanuit een opdracht van school</p>
-        <p>Het doel van deze website is om u te laten zien wat wij voor games kunnen maken!</p>
+        <p>het doel van deze website is om een spel te maken waar je moet betalen om te spelen 
+            het geld dat wij opsparen gaat naar ons goed doel
+        </p>
     </div>
 </body>
 </html>
