--- a/Michael.html
+++ b/Michael.html
@@ -97,6 +97,10 @@
         <img id="foto2" class="hidden" src="img/LossStreak.png" alt="Loss streak" width="600">
     </div>
     <div class="media-container">
+        <button class="button button2" onclick="toggleMedia('foto3')">Win streak yippee</button>
+        <img id="foto3" class="hidden" src="img/WinStreak.png" alt="Win streak" width="600">
+    </div>
+    <div class="media-container">
         <button class="button button2" onclick="toggleMedia('tekst1')">Contactinformatie</button>
         <p id="tekst1" class="hidden"><b>
             E-Mail: 9015139@student.zadkine.nl
