--- a/gameyvan.html
+++ b/gameyvan.html
@@ -46,12 +46,12 @@
             <a href="contact.html">Contact</a>
         </div>
     </div>
-    <div class="levelcontainer">
-        <button><a href="gameyvan.html">level 1</a></button>
+    <div class="gamemodecontainer">
+        <button><a href="gameyvan.html">normal snake</a></button>
         <br>
-        <button><a href="level2yvan.html">level 2</a></button>
+        <button><a href="level2yvan.html">turtle to sonic</a></button>
         <br>
-        <button><a href="level3yvan.html">level 3</a></button>
+        <button><a href="level3yvan.html">virus</a></button>
         <div class="log">
             <h2>Laatste scores:</h2>
             <ul id="loglijst"></ul>
@@ -59,6 +59,7 @@
         <button id="knopje" onclick="resetlog()">Reset de Loglijst!</button>
     </div>
        </div>
+
       
     <div id="gameContainer">
         <canvas id="gameBoard" width="500" height="500"></canvas>
